Hack to fix overflow hidden - Need to fix later.

--- a/meteor-contacts.scss
+++ b/meteor-contacts.scss
@@ -63,3 +63,8 @@ footer {
 .contact-header{
   text-align: center;
 }
+
+// TODO: Later
+.transitioner {
+  overflow: visible;
+}
